scrollbar fixed mobile

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ html, body{
     padding: 0px;
     margin: 0px;
     /* overflow: hidden; */
+ 
+}
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 
